[gd_scene load_steps=7 format=3 uid="uid://dq21ausqfl3wl"]

[ext_resource type="Script" path="res://core/CPMOSCManager.gd" id="1_vax1h"]
[ext_resource type="Script" path="res://addons/godOSC/scripts/OSCServer.gd" id="2_tt6q6"]
[ext_resource type="Script" path="res://addons/godOSC/scripts/OSCClient.gd" id="3_okd4r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ae4dv"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.247059, 0.247059, 0.247059, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 1
shadow_offset = Vector2(0, 1.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2r3y0"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.215686, 0.215686, 0.215686, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 1
shadow_offset = Vector2(0, 1.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dr7b6"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.180392, 0.180392, 0.180392, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 1
shadow_offset = Vector2(0, 1.5)

[node name="CPMOSCManager" type="Node"]
script = ExtResource("1_vax1h")

[node name="OSCServer" type="Node" parent="."]
script = ExtResource("2_tt6q6")
port = 9001

[node name="OSCClient" type="Node" parent="."]
script = ExtResource("3_okd4r")
port = 9000

[node name="Interface" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Interface"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TabContainer" type="TabContainer" parent="Interface/MarginContainer"]
layout_mode = 2
current_tab = 2

[node name="Controls" type="MarginContainer" parent="Interface/MarginContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="Interface/MarginContainer/TabContainer/Controls"]
layout_mode = 2

[node name="ModuleControlList" type="VBoxContainer" parent="Interface/MarginContainer/TabContainer/Controls/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Loaded Modules" type="MarginContainer" parent="Interface/MarginContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Interface/MarginContainer/TabContainer/Loaded Modules"]
layout_mode = 2

[node name="LoadedModulesList" type="VBoxContainer" parent="Interface/MarginContainer/TabContainer/Loaded Modules/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Settings" type="MarginContainer" parent="Interface/MarginContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
metadata/_tab_index = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Interface/MarginContainer/TabContainer/Settings"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Network:"

[node name="PanelContainer" type="PanelContainer" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Sending:"

[node name="SendingToggle" type="CheckButton" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
button_pressed = true

[node name="HBoxContainer5" type="HBoxContainer" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Receiving:"

[node name="ReceivingToggle" type="CheckButton" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
button_pressed = true

[node name="HSeparator" type="HSeparator" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "IP Address:"

[node name="IPAddress" type="LineEdit" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "The IP address to receive and send from.
You very likely don't need to change this.
(Default: 127.0.0.1)"
text = "127.0.0.1"
placeholder_text = "127.0.0.1"
alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Receiving Port:"

[node name="ReceivingPort" type="SpinBox" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "The port to receive from.
You very likely don't need to change this.
(Default: 9001)"
max_value = 65535.0
value = 9001.0
rounded = true
alignment = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Sending Port:"

[node name="SendingPort" type="SpinBox" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "The port to send to.
You very likely don't need to change this.
(Default: 9000)"
max_value = 65535.0
value = 9000.0
rounded = true
alignment = 2

[node name="TestButton" type="Button" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_styles/focus = SubResource("StyleBoxFlat_ae4dv")
theme_override_styles/hover = SubResource("StyleBoxFlat_2r3y0")
theme_override_styles/normal = SubResource("StyleBoxFlat_dr7b6")
text = "Send Test Message"

[node name="HSeparator" type="HSeparator" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Configs:"

[node name="PanelContainer2" type="PanelContainer" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2

[node name="ImportButton" type="Button" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_styles/focus = SubResource("StyleBoxFlat_ae4dv")
theme_override_styles/hover = SubResource("StyleBoxFlat_2r3y0")
theme_override_styles/normal = SubResource("StyleBoxFlat_dr7b6")
text = "Import"

[node name="Control" type="Control" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(10.5, 0)
layout_mode = 2

[node name="ExportButton" type="Button" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_styles/focus = SubResource("StyleBoxFlat_ae4dv")
theme_override_styles/hover = SubResource("StyleBoxFlat_2r3y0")
theme_override_styles/normal = SubResource("StyleBoxFlat_dr7b6")
text = "Export
"

[node name="VSeparator" type="VSeparator" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Logging"

[node name="PanelContainer" type="PanelContainer" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer2/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer2/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Info:"

[node name="InfoToggle" type="CheckButton" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Debug:"

[node name="DebugToggle" type="CheckButton" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10

[node name="HBoxContainer3" type="HBoxContainer" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Warning:"

[node name="WarningToggle" type="CheckButton" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10

[node name="HBoxContainer4" type="HBoxContainer" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Error:"

[node name="ErrorToggle" type="CheckButton" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10

[node name="HBoxContainer5" type="HBoxContainer" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Incoming:"

[node name="IncomingToggle" type="CheckButton" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10

[node name="HBoxContainer6" type="HBoxContainer" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
text = "Outgoing:"

[node name="OutgoingToggle" type="CheckButton" parent="Interface/MarginContainer/TabContainer/Settings/HBoxContainer/VBoxContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10

[node name="ImportDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(600, 400)
max_size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.zip")
use_native_dialog = true

[node name="ExportDialog" type="FileDialog" parent="."]
initial_position = 1
size = Vector2i(972, 175)
access = 2
filters = PackedStringArray("*.zip")
use_native_dialog = true
